@@ -17,170 +17,158 @@ package oop;
  *     boolean                               Boolean  
  *#######################################################################################
  */
+
 public class JavaWrapperClasses {
 	
-
-void numberClass() {
+//Number Super Class
+	void numberClassMethods() {
+		Float f1=Float.valueOf(5.5f); // create Float wrapper class object
+		System.out.println("Float Object : "+f1);
+		byte byteVar=f1.byteValue();
+		System.out.println("Float Object converted in byte primitive type: "+byteVar);
+		short shortVar=f1.shortValue();
+		System.out.println("Float Object converted in short primitive type: "+shortVar);
+		int intVar=f1.intValue();
+		System.out.println("Float Object converted in int primitive type: "+intVar);
+		long longVar=f1.longValue();
+		System.out.println("Float Object converted in long primitive type: "+longVar);
+		float floatVar=f1.floatValue();
+		System.out.println("Float Object converted in float primitive type: "+floatVar);
+		double doubleVar=f1.doubleValue();
+		System.out.println("Float Object converted in double primitive type: "+doubleVar);
+	}
 	
-	 //* Number class is super class of all the numeric wrapper classes --> Byte,Short,Integer,Long,Float,Double
-	Double d1=new Double(4.356);
-	byte v=d1.byteValue();
-	short s=d1.shortValue();
-	int i=d1.intValue();
-	long l=d1.longValue();
-	float f=d1.floatValue();
-	double d=d1.doubleValue();
-	System.out.println("converting Double to byte : "+v);
-	System.out.println("converting Double to short : "+s);
-	System.out.println("converting Double to int : "+i);
-	System.out.println("converting Double to long : "+l);
-	System.out.println("converting Double to float : "+f);
-	System.out.println("converting Double to double : "+d);
-		 
-}//numberClass() 
-
-
-void integer_wrapperClass() {
-	int a=100;
-	Integer x=new Integer(a);
-	System.out.println("toString(a) : "+Integer.toString(a)); // toString() is used to get a string representation of the integer argument as an signed integer in base 10
-	System.out.println("toHexString(a) : "+Integer.toHexString(a)); // toHexString() is used to get a string representation of the integer argument as an unsigned integer in base 16
-	System.out.println("toOctalString(a) : "+Integer.toOctalString(a)); // toOctalString() is used to get a string representation of the integer argument as an unsigned integer in base 8
-	System.out.println("toBinaryString(a) : "+Integer.toBinaryString(a)); // toBinaryString() is used to get a string representation of the integer argument as an unsigned integer in base 2
-	Integer xx=Integer.valueOf(a); // valueOf() used to get an Integer object representing the specified int value
-	String str="505";
-	Integer s=Integer.parseInt(str);
-	System.out.println("parseInt(str) : "+s.getClass().getName());
+//Integer Wrapper Class
+	void intergerWrapperClassMethods() {
+		Integer obj=Integer.valueOf(5); // create wrapper class object
+		int x=obj.intValue();
+		System.out.println("toString(x) : "+Integer.toString(x));
+		System.out.println("toHexString(x) : "+Integer.toHexString(x));
+		System.out.println("toOctalString(x) : "+Integer.toOctalString(x));
+		System.out.println("toBinaryString(x) : "+Integer.toBinaryString(x));
+		String y="65";
+		Integer obj1=Integer.parseInt(y);
+		System.out.println("obj1=Integer.parseInt(65) : "+obj1);
+		Integer obj2=Integer.decode(y);
+	}
+//Long Wrapper Class
+	void longWrapperClassMethods() {
+		Long obj=Long.valueOf(15);
+		long x=obj.longValue();
+		System.out.println("toString(x) : "+Long.toString(x));
+		System.out.println("toHexString(x) : "+Long.toHexString(x));
+		System.out.println("toOctalString(x) : "+Long.toOctalString(x));
+		System.out.println("toBinaryString(x) : "+Long.toBinaryString(x));
+		String y="66";
+		Long obj1=Long.parseLong(y);
+		System.out.println("obj1=Integer.parseInt(66) : "+obj1);
+		Long obj2=Long.decode(y);
+		System.out.println("decode(66) : "+obj2);
+	}
+//Sort Wrapper Class
+	void shortWrapperClass() {
+		short x=9;
+		Short obj=Short.valueOf(x);
+		System.out.println("toString(x) : "+Short.toString(x));
+		//System.out.println("toHexString(x) : "+Short.toHexString(x));
+		//System.out.println("toOctalString(x) : "+Short.toOctalString(x));
+		//System.out.println("toBinaryString(x) : "+Short.toBinaryString(x));
+		String y="67";
+		Short obj1=Short.parseShort(y);
+		System.out.println("parseShort(67) : "+obj1);
+		Short obj2=Short.decode(y);
+		System.out.println("decode(y) : "+obj2);
+	}
 	
-	String ss="sun.arch.data.model"; //sun.arch.data.model is the Java System property which determines the version of the JVM is used - 32 or 64bit.
+//Byte Wrapper Class
+	void byteWrapperClass() {
+		byte x=88;
+		Byte obj=Byte.valueOf(x);
+		System.out.println("toString(x) : "+Byte.toString(x));
+		//System.out.println("toHexString(x) : "+Byte.toHexString(x));
+		//System.out.println("toOctalString(x) : "+Byte.toOctalString(x));
+		//System.out.println("toBinaryString(x) : "+Byte.toBinaryString(x));
+		String y="68";
+		Byte obj2=Byte.parseByte(y);
+		System.out.println("parseByte(68) : "+obj2);
+		Byte obj3=Byte.decode(y);
+		System.out.println("decode(68) : "+obj3);
+	}
+
+//Float Wrapper Class
+	void floatWrapperClass() {
+		Float obj=Float.valueOf(5.6f);
+		float x=obj.floatValue();
+		System.out.println("toString(x) :"+Float.toString(x));
+		System.out.println("toHexString(x) : "+Float.toHexString(x));
+		//System.out.println("toOctalString(x) : "+Float.toOctalString(x));
+		//System.out.println("toBinaryString(x) : "+Float.toBinaryString(x));
+		Float obj2=Float.parseFloat("55");
+		
+	}
 	
-	int aa=Integer.getInteger(ss);
-	System.out.println("getInteger(sun.arch.data.model) : "+aa);
-	// aa=Integer.getInteger("Hello"); // null
-}
-
-
-void long_wrapperClass() {
-	long a=100;
-	Long x=new Long(a);
-	System.out.println("toString(a) : "+Long.toString(a)); // toString() is used to get a string representation of the long argument as an signed Long in base 10
-	System.out.println("toHexString(a) : "+Long.toHexString(a)); // toHexString() is used to get a string representation of the long argument as an unsigned Long in base 16
-	System.out.println("toOctalString(a) : "+Long.toOctalString(a)); // toOctalString() is used to get a string representation of the long argument as an unsigned Long in base 8
-	System.out.println("toBinaryString(a) : "+Long.toBinaryString(a)); // toBinaryString() is used to get a string representation of the long argument as an unsigned Long in base 2
-	Long xx=Long.valueOf(a); // valueOf() used to get an Long object representing the specified long value
-	String str="505";
-	Long s=Long.parseLong(str);
-	System.out.println("parseLong(str) : "+s.getClass().getName());
-}
-
-
-void short_wrapperClass() {
-	short a=100;
-	Short x=new Short(a);
-	System.out.println("toString(a) : "+Short.toString(a)); // toString() is used to get a string representation of the short argument as an signed Short in base 10
-	Short xx=Short.valueOf(a); // valueOf() used to get an Short object representing the specified short value
-	String str="505";
-	Short s=Short.parseShort(str);
-	System.out.println("parseShort(str) : "+s.getClass().getName());
-}
-
-
-void byte_wrapperClass() {
-	byte a=100;
-	Byte x=new Byte(a);
-	System.out.println("toString(a) : "+Byte.toString(a)); // toString() is used to get a string representation of the byte argument as an signed Byte in base 10
-	Byte xx=Byte.valueOf(a); // valueOf() used to get an Byte object representing the specified byte value
-	String str="125";
-	Byte s=Byte.parseByte(str);
-	System.out.println("parseByte(str) : "+s.getClass().getName());
-}
-
-
-void float_wrapperClass() {
-	float a=101.65F;
-	Float x=new Float(a);
-	System.out.println("toString(a) : "+Float.toString(a)); // toString() is used to get a string representation of the float argument as an signed Float in base 10
-	Float xx=Float.valueOf(a); // valueOf() used to get an Float object representing the specified float value
-	String str="505.68";
-	Float s=Float.parseFloat(str);
-	System.out.println("parseFloat(str) : "+s.getClass().getName());
-}
-
-
-void double_wrapperClass() {
-	double a=101.65;
-	Double x=new Double(a);
-	System.out.println("toString(a) : "+Double.toString(a)); // toString() is used to get a string representation of the double argument as an signed Double in base 10
-	Double xx=Double.valueOf(a); // valueOf() used to get an Double object representing the specified double value
-	String str="505.658";
-	Double s=Double.parseDouble(str);
-	System.out.println("parseDouble(str) : "+s.getClass().getName());
-}
-	
-	
+	//Double Wrapper Class
+		void doubleWrapperClassMethods() {
+			Double obj=Double.valueOf(68.5);
+			double x=obj.doubleValue();
+			//System.out.println("toString(x) :"+Float.toString(x));
+			//System.out.println("toHexString(x) : "+Float.toHexString(x));
+			//System.out.println("toOctalString(x) : "+Float.toOctalString(x));
+			//System.out.println("toBinaryString(x) : "+Float.toBinaryString(x));
+			Double obj1=Double.parseDouble("66");
+			System.out.println("parseDouble(\"66\") : "+obj1);
+			
+		}
 
 	public static void main(String[] args) {
-		JavaWrapperClasses obj=new JavaWrapperClasses();
-		obj.numberClass();
-		obj.integer_wrapperClass();
-		obj.long_wrapperClass();
-		obj.short_wrapperClass();
-		obj.byte_wrapperClass();
-		obj.float_wrapperClass();
-		obj.double_wrapperClass();
-		obj.boolean_wrapperClass();
-		obj.character_wrapperClass();
-		
-
-
-	}//main()
-	
-	
-	void boolean_wrapperClass() {
-		boolean obj1=Boolean.parseBoolean("True"); //true
-		boolean obj2=Boolean.parseBoolean("False"); //false
-		boolean obj3=Boolean.parseBoolean("HelloHowru"); //false
-		
-		System.out.println("obj1 :"+obj1);
-		System.out.println("obj2 :"+obj2);
-		System.out.println("obj3 :"+obj3);
-		
-		
-		Boolean obj4=new Boolean(obj1);
-		Boolean obj5=new Boolean(obj2);
-		
-		boolean obj6=obj4.booleanValue();
-		boolean obj7=obj5.booleanValue();
-		System.out.println("obj6 :"+obj6);
-		System.out.println("obj7 :"+obj7);
-		
-		Boolean obj8=Boolean.valueOf(obj1);
-		System.out.println("obj8 :"+obj8);
-		System.out.println("toString(obj3) : "+Boolean.toString(obj3)); 
-	
+		// TODO Auto-generated method stub
+		//Integer iobj=new Integer(55);
+		Integer iObj=Integer.valueOf(55);
+		System.out.println("Old Value :"+iObj);
+        changeValue(iObj);
+        System.out.println("New Value : "+iObj);
+        
+        JavaWrapperClasses obj=new JavaWrapperClasses();
+        obj.numberClassMethods();
+        obj.intergerWrapperClassMethods();
+        obj.longWrapperClassMethods();
+        obj.shortWrapperClass();
+        obj.byteWrapperClass();
+        obj.floatWrapperClass();
+        obj.doubleWrapperClassMethods();
+        obj.characterWrapperClass();
+        obj.booleanWrapperClass();
 	}
 	
 	
+	private static void changeValue(Integer iObj) {
+		/*
+		 * All primitive wrapper classes are immutable ,when new object is created
+		 * the old object is not modified.
+		 */
+		iObj=iObj+15;
+	}//changeValue
+
+//Character Wrapper Class
+	void characterWrapperClass() {
+		Character obj=Character.valueOf('A');
+		char x=obj.charValue();
+		System.out.println("Character.isLetter('A') : "+Character.isLetter(x));
+		System.out.println("Character.isDigit('5') : "+Character.isDigit('5'));
+		System.out.println("Character.isWhitespace(' ') : "+Character.isWhitespace(' '));
+		System.out.println("Character.isUpperCase('c') : "+Character.isUpperCase('c'));
+		System.out.println("Character.isLowerCase('c') : "+Character.isLowerCase('c'));
+		System.out.println("Character.toUpperCase('a') : "+Character.toUpperCase('a'));
+		System.out.println("Character.toLowerCase('a') : "+Character.toLowerCase('A'));
+		System.out.println("Character.toString('W') : "+Character.toString('W'));
+		System.out.println("Character.isAlphabetic('@') : "+Character.isAlphabetic('@'));
 	
-	void character_wrapperClass() {
-		System.out.println("Character.isLetter('A') :"+Character.isLetter('A'));
-		System.out.println("Character.isLetter('2') :"+Character.isLetter('2'));
-		System.out.println("Character.isDigit('A') :"+Character.isDigit('A'));
-		System.out.println("Character.isDigit('5') :"+Character.isDigit('5'));
-		System.out.println("Character.isWhitespace(' ') :"+Character.isWhitespace(' '));
-		System.out.println("Character.isUpperCase('5') :"+Character.isUpperCase('5'));
-		System.out.println("Character.isUpperCase('A') :"+Character.isUpperCase('A'));
-		System.out.println("Character.isLowerCase('A') :"+Character.isLowerCase('A'));
-		System.out.println("Character.isLowerCase('b') :"+Character.isLowerCase('b'));
-		System.out.println("Character.toUpperCase('b') :"+Character.toUpperCase('b'));
-		System.out.println("Character.toLowerCase('D') :"+Character.toLowerCase('D'));
-		System.out.println("Character.toString('D') :"+Character.toString('D'));		
-		System.out.println("Character.charCount(0x9001) :"+Character.charCount(0x9001));
-		
-		Character obj=new Character('x');
-		char ch=obj.charValue();
-		
 	}
 	
-
-}//JavaWrapperClasses
+//Boolean Wrapper Class
+	void booleanWrapperClass() {
+		Boolean obj=Boolean.valueOf(false);
+		boolean x=obj.booleanValue();
+		System.out.println("Boolean.toString(x) : "+Boolean.toString(x));
+	}
+}
